--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "style-loader": "^0.13.0",
     "webpack": "2.2.1",
     "webpack-dev-server": "^2.3.0",
-    "write-file-webpack-plugin": "3.4.2"
+    "write-file-webpack-plugin": "3.4.2",
+    "youtube-node": "^1.3.2",
+    "youtube-player": "^5.4.0"
   }
 }
