--- a/package.json
+++ b/package.json
@@ -18,7 +18,6 @@
     "webpack": "2.2.1",
     "webpack-dev-server": "^2.3.0",
     "write-file-webpack-plugin": "3.4.2",
-    "youtube-node": "^1.3.2",
-    "youtube-player": "^5.4.0"
+    "youtube-node": "^1.3.2"
   }
 }
