--- a/package.json
+++ b/package.json
@@ -15,9 +15,10 @@
     "html-loader": "^0.4.5",
     "html-webpack-plugin": "2.24.1",
     "style-loader": "^0.13.0",
+    "uglifyjs-webpack-plugin": "^1.1.6",
     "webpack": "2.2.1",
     "webpack-dev-server": "^2.3.0",
     "write-file-webpack-plugin": "3.4.2",
-    "youtube-node": "^1.3.2"
+    "youtube-finder": "^1.0.1"
   }
 }
