--- a/src/manifest.json
+++ b/src/manifest.json
@@ -11,6 +11,13 @@
   "icons": {
     "128": "icon-128.png"
   },
+  "permissions": [
+    "https://www.mountainproject.com/route/*"
+  ],
   "manifest_version": 2,
-  "content_security_policy": "script-src 'self' 'unsafe-eval'; object-src 'self'"
+  "content_security_policy": "script-src 'self' 'unsafe-eval'; object-src 'self'",
+  "content_scripts": [{
+    "js": ["content.bundle.js"],
+    "matches": ["https://www.mountainproject.com/route/*"]
+  }]
 }
