--- a/package.json
+++ b/package.json
@@ -7,9 +7,13 @@
     "start": "node utils/webserver.js"
   },
   "devDependencies": {
+    "babel-eslint": "^8.2.1",
     "clean-webpack-plugin": "^0.1.17",
     "copy-webpack-plugin": "^4.2.0",
     "css-loader": "^0.25.0",
+    "eslint": "^4.9.0",
+    "eslint-config-airbnb-base": "^12.1.0",
+    "eslint-plugin-import": "^2.7.0",
     "file-loader": "^0.11.2",
     "fs-extra": "^0.30.0",
     "html-loader": "^0.4.5",
@@ -18,7 +22,9 @@
     "uglifyjs-webpack-plugin": "^1.1.6",
     "webpack": "2.2.1",
     "webpack-dev-server": "^2.3.0",
-    "write-file-webpack-plugin": "3.4.2",
+    "write-file-webpack-plugin": "3.4.2"
+  },
+  "dependencies": {
     "youtube-finder": "^1.0.1"
   }
 }
